--- a/src/app/components/author-profile/author-profile.component.html
+++ b/src/app/components/author-profile/author-profile.component.html
@@ -23,7 +23,7 @@
         </div>
 
       </div>
-      <app-profile-ads [user]="author$"></app-profile-ads>
+      <app-profile-ads [author]="author$"></app-profile-ads>
     
     </div>
     
