--- a/src/styles.scss
+++ b/src/styles.scss
@@ -117,6 +117,34 @@ li {
   border-radius: 15px !important;
 }
 
+.ant-message-notice-content {
+  border-radius: 15px !important;
+}
+
+.empty{
+  &__wrapper {
+    display: flex;
+    height: 400px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__img {
+    font-size: 24px;
+    margin: 10px;
+  }
+
+  &__text {
+    margin: 10px;
+  }
+}
+
+.divider {
+  border-top: 1px solid #d4d4d4;
+  margin-top: -15px;
+  margin-bottom: 15px;
+}
 
 ngx-dadata{
   width: 150px !important;
