--- a/src/app/components/search-ads/search-ads.component.html
+++ b/src/app/components/search-ads/search-ads.component.html
@@ -24,6 +24,7 @@
         </div>
 
         <button nz-button nzType="primary" type="submit">Применить</button>
+        <button nz-button nzType="default" type="button" (click)="cleanFilters()">Очистить фильтры</button>
       </form>
     </div>
     
